--- a/riskoracle/package.json
+++ b/riskoracle/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.0.0",
+    "ethers": "^5.7.2",
     "ipfs-core": "^0.17.0"
   }
 }
