--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,13 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "ethers": "^5.7.2",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "wagmi": "^0.6.0",
+    "wagmi": "^0.6.8",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
@@ -51,11 +52,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "styled-components": "^5.3.6",
-    "tailwindcss": "^3.2.1",
-    "wouter": "^2.8.0-alpha.2"
+    "prettier": "^2.7.1"
   }
 }
