contract: deployment script and command

--- a/contract/package.json
+++ b/contract/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "hardhat test",
-    "prettier": "prettier --write 'contracts/**/*.sol' 'test/**/*.ts'"
+    "prettier": "prettier --write 'contracts/**/*.sol' 'test/**/*.ts'",
+    "deploy": "hardhat run --network mumbai ./deploy.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,11 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.7.3",
     "hardhat": "^2.12.0",
-    "hardhat-deploy": "^0.11.20",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
