--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.16",
     "typescript": "^4.8.4",
