--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HONEYPOT",
-  "name": "HONEYPOT",
+  "short_name": "HONEY BEE LOANS",
+  "name": "HONEY BEE LOANS",
   "icons": [
     {
       "src": "favicon.ico",
