--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://rudolfolah.github.io/hackathon-chainlinkfall2022/",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
